--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,23 +3,37 @@
   <head>
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
   </head>
+  <style>
+    .item{
+     align: center;
+      margin-top:30px;
+      height: 700px;
+      width: 300px;
+    }
+  </style>
   <body>
 
   <form method="post" action="/add" enctype="application/x-www-form-urlencoded">
-    <input name="name" placeholder="Tên SP">
-    <input name="price" placeholder="Giá">
-    <button type="submit">Insert</button>
+    <input name="link"   placeholder="Link Anh">
+    <input name="description" placeholder="Noi Dung">
+    <input name="date" placeholder="Ngay thang">
+    <button type="submit">Them</button>
   </form>
   <% for(var i = 0;i < data.length; i++){ %>
 
-    <hr>
+    <%var url = data[i].link%>
+      <div class="item" >
+      <img src="<%=url%>" width="1000px" height="600px"/>
     <div>ID : <%= data[i]._id %></div>
-    <div>ten : <%= data[i].name  %></div>
-    <div>gia : <%= data[i].price %></div>
+    <div>Mo ta : <%= data[i].description %></div>
+    <div>ngay : <%= data[i].date %></div>
     <a href="/delete/?id=<%= data[i]._id %>">Delete</a>
     <a href="/updateForm/?id=<%= data[i]._id %>">Update</a>
 
   <% } %>
+      </div>
   </body>
 </html>
