--- a/views/update.ejs
+++ b/views/update.ejs
@@ -8,15 +8,17 @@
   <form action="/update" method="post" enctype="application/x-www-form-urlencoded">
     <hr>
     <div>ID : <%= data._id %></div>
-    <div>name : <%= data.name %></div>
-    <div>number : <%= data.price %></div>
+    <div>link : <%= data.link %></div>
+    <div>description : <%= data.description %></div>
+    <div>date : <%= data.date %></div>
     <hr>
     <!--input voi id để truyền lên id mà ko cho người dùng sửa
     nên đặt là hidden-->
 
     <input name="id" value="<%= data._id %>" hidden>
-    <div>Name : <input name="name" value=" <%= data.name %>"></div>
-    <div>Number : <input name="number" value="<%= data.price %>"></div>
+    <div>link : <input name="link" value=" <%= data.link %>"></div>
+    <div>description : <input name="description" value="<%= data.description %>"></div>
+    <div>date : <input name="date" value="<%= data.date %>"></div>
 
     <button type="submit">Update</button>
 
