--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,17 @@
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <style>
+    body{
+      background-image: url("https://images-cdn.welcomesoftware.com/Zz0zZTliMjQ4MzhlNGExMWViYmJiMjFiZTI2ZWNmN2MzZA==");
+
+    }
+    .btn{
+      border-radius: 15px;
+      background-color: aquamarine;
+    }
     .item{
      align: center;
       margin-top:30px;
@@ -14,35 +22,24 @@
       width: 300px;
     }
   </style>
-  <body>
-<!--
-<form method="post" action="find" enctype="application/x-www-form-urlencoded">
-  <input name="idd" id="idd">
-  <button type="submit">Tim</button>
-</form>-->
-
-
-<!--
+  <body class="container">
+  <h1>NTA2K Notes</h1>
   <% for(var i = 0;i < data.length; i++){ %>
-    <%var url = data[i].link%>
       <div class="item" >
-      <img src="<%=url%>" width="1000px" height="600px"/>
-    <div>ID : <%= data[i]._id %></div>
-    <div>Mo ta : <%= data[i].description %></div>
-    <div>ngay : <%= data[i].date %></div>
+    <div>Tiêu Đề : <%= data[i].title %></div>
+    <div>Nội Dung : <%= data[i].content %></div>
     <a href="/delete/?id=<%= data[i]._id %>">Delete</a>
     <a href="/updateForm/?id=<%= data[i]._id %>">Update</a>
 <% } %>
--->
-<h1>Trang web co <%= data.length%> bai viet </h1>
-<form method="get" action="/insert" enctype="application/x-www-form-urlencoded">
-    <button type="submit">Them</button>
-</form>
-<form method="get" action="/view" enctype="application/x-www-form-urlencoded">
-    <button type="submit">Xem</button>
-</form>
-</form>
-
+          <hr />
+        <form action="/insert" method="get" enctype="application/x-www-form-urlencoded">
+          <button  class="btn" name="insert" type="submit">Thêm</button>
+        </form>
       </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
   </body>
 </html>
