--- a/views/insert.ejs
+++ b/views/insert.ejs
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+    <style>
+    body{
+    background-image: url("https://images-cdn.welcomesoftware.com/Zz0zZTliMjQ4MzhlNGExMWViYmJiMjFiZTI2ZWNmN2MzZA==");
+    }
+    .btn{
+      border-radius: 15px;
+      background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAARMAAAC3CAMAAAAGjUrGAAAAA1BMVEX///+nxBvIAAAAR0lEQVR4nO3BAQ0AAADCoPdPbQ8HFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPBgxUwAAU+n3sIAAAAASUVORK5CYII=");
+    }
+    </style>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -12,11 +20,9 @@
 
 
   <form method="post" action="/add" enctype="application/x-www-form-urlencoded">
-    <input name="title" id="title"  placeholder="Tieu De">
-    <input name="content" placeholder="Noi Dung">
-    <input name="post" placeholder="Bai Viet">
-    <input  name="link" placeholder="link">
-    <input type="submit" value="Upload Photo">
+    <input name="title" id="title"  placeholder="Tiêu Đề">
+    <input name="content" placeholder="Nội Dung">
+    <input type="submit" class="btn" value="Add">
   </form>
 
   </body>
